# i18n-tool

./: .gitignore  PRD.md  README.md  TASKS.md  cli.py  config.py  core.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_cli.py  test_core.py
