[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "i18n-tool"
version = "1.0.0"
description = "CLI tool for managing translation keys across JSON files"
requires-python = ">=3.8"
dependencies = ["click"]

[project.scripts]
i18n-tool = "cli:cli"

[tool.setuptools]
py-modules = ["cli", "core"]
